changed background height to correct issue seen on deployed website of background being too short

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   background:linear-gradient(to bottom, #3e8dc2 0%, #0d1c41 100%);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 600px;
+  height: 800px;
   text-align: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
